started working on #99, edited our open api
